feat: add Mandlebrot set generation

--- a/packages/Mandelbrot/src/index.html
+++ b/packages/Mandelbrot/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello from WebAssembly!</title>
+    <title>Mandlebrot with WAT#</title>
     <style>
         h1 {
             font-family: sans-serif
