refactor: add some polish

--- a/packages/ImportMemory/src/index.html
+++ b/packages/ImportMemory/src/index.html
@@ -9,6 +9,7 @@
     </style>
   </head>
   <body>
+    <h3 id="log"></h3>
     <div>
       <h3>
         Shared memory contents <button onclick="initShape()">Init shape</button>
